fix: remove double scrollbars

--- a/src/App/styles.less
+++ b/src/App/styles.less
@@ -114,7 +114,7 @@ html {
                 position: absolute;
                 top: calc(1.2 * var(--horizontal-nav-bar-size) + env(safe-area-inset-top, 0px));
                 right: env(safe-area-inset-right, 0px);
-                bottom: calc(1.2 * var(--horizontal-nav-bar-size) + var(--calculated-bottom-safe-inset));
+                bottom: calc(1.2 * var(--horizontal-nav-bar-size) + var(--calculated-bottom-safe-inset, 0px));
                 left: auto;
                 z-index: 1;
                 padding: 0 calc(0.5 * var(--horizontal-nav-bar-size));
