--- a/src/routes/Discover/styles.less
+++ b/src/routes/Discover/styles.less
@@ -31,7 +31,7 @@
         --selectable-inputs-assumed-height: 84px;
         --top-overlay-size: var(--selectable-inputs-assumed-height);
         --bottom-vertical-nav-bar-size: 0px;
-        --bottom-overlay-size: calc(var(--bottom-vertical-nav-bar-size) + env(safe-area-inset-bottom, 0px));
+        --bottom-overlay-size: var(--bottom-vertical-nav-bar-size);
         --overlap-size: 3rem;
         --transparency-grandient-pad: 6rem;
 
